test/files/run/repl-paste-2.check
Type in expressions to have them evaluated.
Type :help for more information.

scala> 

scala> scala> 0123
res4: Int = 0123

scala> 123
res5: Int = 123

scala> 567
res6: Int = 567

scala> res5 + res6
res7: Int = 690

scala> val x = dingus
<console>:7: error: not found: value dingus
       val x = dingus
               ^

scala> val x = "dingus"
x: java.lang.String = dingus

scala> x.length
res9: Int = 6

scala> x.length + res5
res10: Int = 12

// Replaying 8 commands from transcript.

scala> 0123
res0: Int = 83

scala> val res5 = { 123 }
res5: Int = 123

scala> val res6 = { 567 }
res6: Int = 567

scala> res5 + res6
res1: Int = 690

scala> val x = dingus
<console>:7: error: not found: value dingus
       val x = dingus
               ^

scala> val x = "dingus"
x: java.lang.String = dingus

scala> x.length
res2: Int = 6

scala> x.length + res5
res3: Int = 129


scala> 
